sosl/test/corpus/scoped_searches.txt
====================================
IN ALL FIELDS
====================================
FIND 'search' IN ALL FIELDS RETURNING Lead(Name)
---
(source_file
  (sosl_query
    (sosl_string)
    (field_scope)
    (returning_clause
      (identifier)
      (field_path (identifier)))))

====================================
IN EMAIL FIELDS
====================================
FIND 'user@example.com' IN EMAIL FIELDS RETURNING Contact(Email, Name)
---
(source_file
  (sosl_query
    (sosl_string)
    (field_scope)
    (returning_clause
      (identifier)
      (field_path (identifier))
      (field_path (identifier)))))

====================================
WITH HIGHLIGHT
====================================
FIND 'Acme' IN ALL FIELDS RETURNING Account(Name) WITH HIGHLIGHT
---
(source_file
  (sosl_query
    (sosl_string)
    (field_scope)
    (returning_clause
      (identifier)
      (field_path (identifier)))
    (with_clause)))

====================================
RETURNING with WHERE condition
====================================
FIND 'test' RETURNING Account(Id, Name WHERE BillingCountry = 'US')
---
(source_file
  (sosl_query
    (sosl_string)
    (returning_clause
      (identifier)
      (field_path (identifier))
      (field_path (identifier))
      (where_condition
        (comparison
          (field_path (identifier))
          (comparison_operator)
          (value (sosl_string)))))))

====================================
RETURNING with ORDER BY and LIMIT
====================================
FIND 'Acme' RETURNING Account(Name ORDER BY Name ASC LIMIT 10)
---
(source_file
  (sosl_query
    (sosl_string)
    (returning_clause
      (identifier)
      (field_path (identifier))
      (order_item
        (field_path (identifier)))
      (integer))))

====================================
IN NAME, PHONE, and SIDEBAR FIELDS
====================================
FIND 'John*' IN NAME FIELDS RETURNING Contact(Name)
FIND '555-1234' IN PHONE FIELDS RETURNING Contact(Phone)
FIND 'Help' IN SIDEBAR FIELDS RETURNING FAQ__kav(Title)
---
(source_file
  (sosl_query
    (sosl_string)
    (field_scope)
    (returning_clause
      (identifier)
      (field_path (identifier))))
  (sosl_query
    (sosl_string)
    (field_scope)
    (returning_clause
      (identifier)
      (field_path (identifier))))
  (sosl_query
    (sosl_string)
    (field_scope)
    (returning_clause
      (identifier)
      (field_path (identifier)))))

====================================
SOSL with UPDATE and OFFSET
====================================
FIND 'test' RETURNING Article__kav(Title) UPDATE TRACKING
FIND 'test' RETURNING Article__kav(Title) UPDATE VIEWSTAT
FIND 'test' RETURNING Account(Name) OFFSET 25
---
(source_file
  (sosl_query
    (sosl_string)
    (returning_clause
      (identifier)
      (field_path (identifier)))
    update: (identifier))
  (sosl_query
    (sosl_string)
    (returning_clause
      (identifier)
      (field_path (identifier)))
    update: (identifier))
  (sosl_query
    (sosl_string)
    (returning_clause
      (identifier)
      (field_path (identifier)))
    offset: (integer)))
